--- a/src/app/question-detail/question-detail.component.html
+++ b/src/app/question-detail/question-detail.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="question-meta">
    <span>{{ question.dateFromNow }}</span>
-   <span>{{ question.views }}人看过</span>
+   <span>{{ question.views }}次浏览</span>
   </div>
 </div>
 <div class="answer-title">回答</div>
