--- a/src/app/user-list/user-list.component.scss
+++ b/src/app/user-list/user-list.component.scss
@@ -10,7 +10,8 @@
   font-size: 16px;
   padding: 20px;
   margin-bottom: 10px;
-  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
   .user-container {
     flex: 1;
     display: flex;
