--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,4 +1,5 @@
-<ul class="news-list">
+<app-loading *ngIf="loading"></app-loading>
+<ul *ngIf="!loading && query === 'public'" class="news-list">
   <a *ngFor="let new of news" class="status-card" [routerLink]="['/question', new.data.image]" >
     <div class="new-title">
       <img class="avatar"  [src]="new.data.avatar.url"/>
@@ -9,4 +10,16 @@
       {{ new.data.content }}
     </div>
   </a>
+</ul>
+<ul *ngIf="!loading && query === 'private'" class="news-list">
+  <li *ngFor="let new of news" class="status-card" >
+    <div class="new-title">
+      <img class="avatar"  [src]="new.data.avatar.url"/>
+      <span class="name">{{ new.data.message }}</span>
+      <span class="date"> {{new.dateFromNow }} </span>
+    </div>
+    <div class="new-content">
+      {{ new.data.content }}
+    </div>
+  </li>
 </ul>
