--- a/src/app/user-list/user-list.component.scss
+++ b/src/app/user-list/user-list.component.scss
@@ -14,7 +14,6 @@
   display: flex;
   align-items: center;
   font-size: 16px;
-  padding: 20px;
   border-bottom: 1px solid #eee;
   transition: all 0.5s ease-out;
   &.active {
@@ -23,6 +22,7 @@
   .user-container {
     flex: 1;
     display: flex;
+    margin: 20px;
     .avatar {
       width: 60px;
       height: 60px;
