--- a/src/app/question-detail/question-detail.component.html
+++ b/src/app/question-detail/question-detail.component.html
@@ -1,8 +1,12 @@
 <div class="question">
   <div class="question-author">
-    <img class="avatar" [src]="question.owner.avatar?.attributes.url || './assets/avatar.jpg'" /> 
-    <span *ngIf="!question.to" class="name">{{ question.owner?.username }}问到</span>
-    <span *ngIf="question.to" class="name">{{ question.owner?.username }}向<span class="to-name"> {{ question.to.attributes.username }} </span>问到</span>
+    <div style="flex:1;display: flex;align-items: center;flex-direction:flex-start;">
+      <img class="avatar" [src]="question.owner.avatar?.attributes.url || './assets/avatar.jpg'" /> 
+      <span *ngIf="!question.to" class="name">{{ question.owner?.username }}问到</span>
+      <span *ngIf="question.to" class="name">{{ question.owner?.username }}向<span class="to-name"> {{ question.to.attributes.username }} </span>问到</span>
+    </div>
+    <i *ngIf="isFavorite" class="material-icons favorite" (click)="cancleFavorite()">favorite</i>
+    <i *ngIf="!isFavorite" class="material-icons favorite" (click)="favorite()">favorite_border</i>
   </div>
   <div class="question-title">
     <h3>{{ question.content }}</h3>
