--- a/src/app/question-detail/question-detail.component.scss
+++ b/src/app/question-detail/question-detail.component.scss
@@ -15,6 +15,10 @@
     .name {
       margin-left: 10px;
     }
+    .favorite {
+      font-size: 25px;
+      color: #f44336;
+    }
   }
   .question-title {
     margin: 10px 0px;
